@@ -71,6 +71,26 @@ module ActiveSupport #:nodoc:
         def end_of_day
           change(:hour => 23, :min => 59, :sec => 59)
         end
+        
+        # Adjusts DateTime to UTC by adding its offset value; offset is set to 0
+        #
+        # Example:
+        #
+        #   DateTime.civil(2005, 2, 21, 10, 11, 12, Rational(-6, 24))       # => Mon, 21 Feb 2005 10:11:12 -0600
+        #   DateTime.civil(2005, 2, 21, 10, 11, 12, Rational(-6, 24)).utc   # => Mon, 21 Feb 2005 16:11:12 +0000
+        def utc
+          new_offset(0)
+        end
+        
+        # Returns true if offset == 0
+        def utc?
+          offset == 0
+        end
+        
+        # Returns the offset value in seconds
+        def utc_offset
+          (offset * 86400).to_i
+        end
       end
     end
   end
